assets/css/main.scss
/* ... */
video {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

body.fullscreen video, #videoOuter:fullscreen video {
  object-fit: contain;
}

#switcher {
  $width: 41px;
  $height: 68px;

  position: absolute;
  position: sticky;
  top: calc(50vh - $height / 2);
  left: 0;
  height: 0;
  overflow: visible;
  touch-action: pan-x;

  div {
    margin-left: calc($width / -2);
    width: 0;
    height: 0;
    user-select: none;
    background-image: url("/images/switcher.svg");
    transition: background-image 0.2s ease-in-out;
    background-repeat: no-repeat;
    background-position: center center;
    width: $width;
    height: $height;
    touch-action: pan-x;
    background-size: cover;
  }
}

.showSidebar #switcher div {
  background-image: url("/images/switcher_rev.svg"), url("/images/switcher.svg");
}

$buttonSize: 1.8rem;
$buttonOffset: 0.25rem;
$buttonBorder: 2px;
#layerSwitcher {
  display: none;

  position: absolute;
  top: calc(50% - $buttonSize - $buttonOffset - $buttonBorder);
  left: $buttonOffset;
  z-index: 2;

  width: $buttonSize;
  height: $buttonSize;

  > button {
    background-image: url("/images/layers.svg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: 70%;
    width: $buttonSize;
    height: $buttonSize;

    background-color: #fff;
    border-radius: 0.2rem;
    border: 0;
    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
  }

  > div {
    position: absolute;
    bottom: 0px;

    background: #fff;

    button {
      width: 100%;
      padding: 8px 8px 6px 4px;
      text-align: left;
      color: #000;

      &.layer + .style, &.style + .layer {
        border-top: 1px solid #999;
      }

      &::before {
        width: 20px;
        padding-right: 10px;
        text-align: right;
        content: "✓";
        color: transparent;
        line-height: 1.0rem;
        background-repeat: no-repeat;
        background-position: center center;
        background-size: 0.8rem;
      }
      &.active::before {
        background-image: url("/images/checkmark.svg");
        filter: brightness(0) saturate(100%);
      }

      &:hover {
        background: #f3f3f3;
      }
    }
  }
}


a.header {
  color: #fff;
  line-height: 2em;
  display: block;
  background: $darkBg;
  text-align: center;
  font-weight: bold;
  font-size: 1.6em;
  text-decoration: none !important;
}

$iconSize: 1.5em;
$iconBorder: 0.13em;
.icon {
  height: $iconSize;
  display: inline-block;
  line-height: calc($iconSize + $iconBorder);
  margin-top: -0.35em;
  margin-bottom: -0.15em;
  font-size: 90%;
  font-weight: normal;
  text-decoration: none;
  text-align: center;
  vertical-align: middle;
  border: $iconBorder solid white;

  &.freizeit {
    border-radius: 0.2rem;
    padding: 0 0.2rem;
  }

  &.alltag {
    border-radius: 50%;
    width: 1.5em;
  }

  &.bezirk {
    border-radius: 0% 0% 50% 50%;
    min-width: 1.5em;
    line-height: 1.25em;
  }

  &.rsw {
    display: none;
  }
}

h3 .icon {
  outline: 1px solid #eee;
  float: right;
  margin-top: -0.2rem;
  pointer-events: none;
  cursor: normal;
}

.icon, .fricon {
  font-weight: bold;
  color: #fff !important;
  cursor: default;
  border: $iconBorder solid white;
  text-shadow: -0.05em 0.05em 0 rgba(0, 0, 0, 0.4),
    0.05em 0.05em 0 rgba(0, 0, 0, 0.4), 0.05em -0.05em 0 rgba(0, 0, 0, 0.4),
    -0.05em -0.05em 0 rgba(0, 0, 0, 0.4);
}


a.icon, a.customicon {
  cursor: pointer;

  &:hover {
    text-decoration: none;
    opacity: 0.8;
  }
}

abbr {
  cursor: help;
  text-decoration: underline dotted;
}


h3,
h4 {
  margin-top: 1em;
}

h3 {
  font-size: 1.1rem;
}

h4 {
  font-size: 1.0rem;
}

h5 {
  margin-top: 0.5em;
  font-size: 0.9rem;
  font-weight: normal;
  font-style: italic;
}

h3:first-child + .duration {
  color: #888;
  font-style: italic;
  display: block;
  margin-top: 0.4em;
}

.artfooter {
  font-style: italic;
  text-align: right;
  color: #888;

  a {
    color: #888;
    font-style: italic;
  }
}

span.updated {
  color: #888;
  font-style: italic;
  display: block;
  padding-top: 0.1rem;
}

ul,
ol {
  padding-left: 0.85rem;
  margin-top: 0.6rem;

  li {
    margin-bottom: 0.4rem;
  }

  .duration {
    color: #888;
    float: right;
    padding-left: .5em;
  }
}

ol.route-list {
  list-style-type: none;
  padding: 0;
  columns: 2;
  column-gap: 0.5rem;

  li {
    margin: 0;
    margin-bottom: 0.5rem;
    clear: all;
    break-inside: avoid-column;
  }

  a:hover {
    span {
      text-decoration: inherit;
      &.icon {
        text-decoration: none;
      }
    }
  }

  span {
    display: inline-block;
    vertical-align: middle;
    line-height: 1.45rem;
  }

  span.freizeit {
    width: 2.5em;
  }

  span.freizeit + span {
    width: calc(100% - 3.3em);
  }

  span.alltag + span {
    width: calc(100% - $iconSize - 2*$iconBorder - 0.2em);
  }

  span + span {
    margin-left: 0.3em;
  }

  .icon {
    cursor: pointer;
    text-decoration: none !important;
    margin-top: -0.16em;
    line-height: 1.25rem;
  }
}


li.separator {
  margin-top: 1rem;
  font-weight: bold;
  list-style-type: '';
  margin-left: -0.85rem;

  &:first-child {
    display: none;
  }
}


ol.hide-bullets {
  list-style-type: none;
  padding: 0;

  time {
    width: 4em;
    display: inline-block;
    vertical-align: top;
  }

  a {
    width: calc(100% - 4.5em);
    display: inline-block;
  }

  li.separator {
    margin-left: 0;
  }

  li {
    clear: both;
  }

  &:after {
    content: ".";
    visibility: hidden;
    display: block;
    height: 0;
    clear: both;
  }
}

table.route-list {
  margin-right: calc(-0.5em - 0.3rem);
  line-height: 1.8rem;

  th {
    padding-right: 0.3rem;
    min-width: 5.1rem;
    vertical-align: top;
  }

  td {
    vertical-align: middle;
    cursor: default;

    > span {
      white-space: nowrap;
    }
  }

  img {
    vertical-align: text-top;
    width: 1.5em;
    height: 1.5em;
  }

  a {
    margin: 0.3rem;
  }
}
/* ... */

